k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lotus
  namespace: lotus
spec:
  type: NodePort
  selector:
    app: lotus
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
